@@ -12,6 +12,8 @@ Additions:
    * Toolbar: Add elm_toolbar_standard_priority_set/get APIs.
    * Add elm_object_scroll_hold/freeze_get.
    * Add ELM_CALENDAR_LAST_DAY_OF_MONTH enum type
+   * Add elm_progressbar_format_function_set API function
+   * Add elm_map_overlay_del_cb_set API function
 
 Fixes:
 
